<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".addDrinkFragment">

    <Button
        android:id="@+id/addDrink"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:text="@string/add_drink"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.773"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.36"
        tools:ignore="DuplicateSpeakableTextCheck" />

    <Button
        android:id="@+id/cancel2"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:text="@string/cancel"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.255"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.36" />

    <TextView
        android:id="@+id/drink_size_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/drink_txt"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.094"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.126" />

    <RadioGroup
        android:id="@+id/size_group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.571"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.11">

        <RadioButton
            android:id="@+id/one_oz"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:text="@string/one_oz" />

        <RadioButton
            android:id="@+id/five_oz"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:text="@string/five_oz" />

        <RadioButton
            android:id="@+id/twelve_oz"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:text="@string/twelve_oz" />

    </RadioGroup>

    <TextView
        android:id="@+id/alcohol_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/alcohol_label"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.093"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.25" />

    <SeekBar
        android:id="@+id/alcohol_seekbar"
        android:layout_width="260dp"
        android:layout_height="wrap_content"
        android:max="30"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.094"
        app:layout_constraintStart_toEndOf="@+id/alcohol_txt"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.251" />

    <TextView
        android:id="@+id/percent_txt"
        android:layout_width="57dp"
        android:layout_height="36dp"
        android:text="@string/alcohol_percent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/alcohol_seekbar"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.256" />
</androidx.constraintlayout.widget.ConstraintLayout>