<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout4"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".viewDrinksFragment" >

    <TextView
        android:id="@+id/num_drinks_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/numberOfDrinks"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.136"
        tools:layout_editor_absoluteX="72dp" />

    <TextView
        android:id="@+id/drink_size_view"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/num_drinks_view"
        app:layout_constraintVertical_bias="0.073"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/one_oz"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        tools:layout_editor_absoluteX="155dp"
        tools:layout_editor_absoluteY="166dp" />

    <TextView
        android:id="@+id/percent_view"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/drink_size_view"
        app:layout_constraintVertical_bias="0.079"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/alcohol_percent_view"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        tools:layout_editor_absoluteX="110dp"
        tools:layout_editor_absoluteY="237dp" />

    <TextView
        android:id="@+id/date"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/percent_view"
        app:layout_constraintVertical_bias="0.093"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/date"
        tools:layout_editor_absoluteX="101dp"
        tools:layout_editor_absoluteY="325dp" />

    <Button
        android:id="@+id/close_view"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/trash"
        app:layout_constraintVertical_bias="0.323"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/close"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        tools:layout_editor_absoluteX="145dp"
        tools:layout_editor_absoluteY="530dp" />

    <ImageView
        android:id="@+id/trash"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/date"
        app:layout_constraintVertical_bias="0.274"
        app:srcCompat="@drawable/ic_trash"
        android:layout_width="72dp"
        android:layout_height="48dp"
        tools:layout_editor_absoluteX="155dp"
        tools:layout_editor_absoluteY="431dp" />

    <ImageView
        android:id="@+id/previous"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/trash"
        app:layout_constraintHorizontal_bias="0.729"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.669"
        app:srcCompat="@drawable/ic_previous"
        android:layout_width="95dp"
        android:layout_height="82dp"
        tools:layout_editor_absoluteX="50dp"
        tools:layout_editor_absoluteY="413dp" />

    <ImageView
        android:id="@+id/next"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.307"
        app:layout_constraintStart_toEndOf="@+id/trash"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.666"
        app:srcCompat="@drawable/ic_next"
        android:layout_width="92dp"
        android:layout_height="87dp"
        tools:layout_editor_absoluteX="241dp"
        tools:layout_editor_absoluteY="413dp" />
</androidx.constraintlayout.widget.ConstraintLayout>